Made ToolBar sticky

--- a/src/assets/styles/components/ToolBar/ToolBar.styl
+++ b/src/assets/styles/components/ToolBar/ToolBar.styl
@@ -4,9 +4,11 @@
 	box-sizing border-box
 	justify-content space-evenly
 	padding 2rem
-	background #4E4F50
+	background rgba(#4E4F50, .9)
 	font-size 1.5rem
 	font-weight bold
+	position sticky
+	top 0
 
 	li
 		cursor pointer
