--- a/src/assets/styles/App.styl
+++ b/src/assets/styles/App.styl
@@ -7,11 +7,9 @@ html
 	#app
 		display flex
 		flex-direction column
-		width 100%
-		height max-content
 		font-family 'Titillium Web', sans-serif
 		font-size 16px
 		color #E2DED0
 
 		.router-view
-			margin 5rem 2rem
+			margin 3rem
