--- a/src/assets/styles/components/Card/Card.styl
+++ b/src/assets/styles/components/Card/Card.styl
@@ -1,5 +1,9 @@
 .card
+	box-sizing border-box
+	border-radius 8px
+	overflow hidden
 	color rgba(black, .8)
+	box-shadow inset 0 20px 20px -20px rgba(black, .15)
 
 	img
 		max-width 100%
