--- a/src/assets/styles/components/Layout/Grid.styl
+++ b/src/assets/styles/components/Layout/Grid.styl
@@ -2,4 +2,10 @@
 	display grid
 	grid-template-columns repeat(3, 1fr)
 	gap 1rem
-	margin 2rem 0
+	padding 2rem 0 0
+
+	//margin 0 .5rem
+	@media screen and (max-width 600px)
+		grid-template-columns repeat(1, 1fr)
+		gap 1.5rem
+		//padding 1.5rem 0 0
