--- a/src/assets/styles/components/ToolBar/ToolBar.styl
+++ b/src/assets/styles/components/ToolBar/ToolBar.styl
@@ -1,14 +1,22 @@
 .tool-bar
-	display flex
-	box-sizing border-box
 	width 100%
-	justify-content space-evenly
+	box-sizing border-box
 	position sticky
 	top 0
-	padding 2rem
+	padding 3rem
 	background rgba(#4E4F50, .9)
-	font-size 1.5rem
-	font-weight bold
 
-	li
-		cursor pointer
+	@media screen and (max-width 600px)
+		position static
+
+	ul
+		display flex
+		justify-content space-evenly
+		font-size 1.5rem
+		font-weight bold
+
+		@media screen and (max-width 600px)
+			flex-direction column
+
+		li
+			cursor pointer
